[package]
name = "recrypt_as_a_service"
version = "0.1.0"
authors = ["Michael Yuan <michael@secondstate.io>", "tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"

[lib]
name = "recrypt_as_a_service_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"
recrypt = { version = "~0.11",  features = ["wasm"],  default-features = false }
